--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+.main-home{
+  max-width: 1100px;
+  height: auto;
+  margin: auto;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.custom-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  background-color: #fff; 
+  padding: 0 20px;
+}
+.logo{
+  width: 120px;
+  height: 31px;
+}
+
+.custom-footer{
+  text-align: center;
+  background-color: rgb(177, 202, 203);
+  color:white ;
+}
+
+img{ 
+  margin-top: 25px;
+  width: 50px;
+  height: 50px;
+}
+
+.barrabusqueda{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #fff;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+/* AppFooter.css */
+.footer-content {
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-section {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.footer-section:last-child {
+  margin-right: 0;
+}
+
+.social-icons a {
+  font-size: 30px; 
+  margin-left: 10px;
+}
+
+
+.legal-notice-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.legal-notice-content {
+  max-width: 800px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
 }
