--- a/src/components/Cart/CartDrawer.css
+++ b/src/components/Cart/CartDrawer.css
@@ -42,3 +42,16 @@
     margin-right: 5px;
 
 }
+
+.payment-button-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.payment-button{
+    background-color: #007bff;
+    color: #ffffff;
+    border-color: #007bff;
+    margin-right: 10px;
+}
