--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-home{
-  max-width: 1100px;
+  max-width: 132vh;
   height: auto;
   margin: auto;
   padding: 0;
@@ -23,9 +23,8 @@
 }
 
 img{ 
-  margin-top: 25px;
-  width: 50px;
-  height: 50px;
+  width: 9vh;
+  height: 8vh;
 }
 
 .barrabusqueda{
